wacc/test/golden/syntaxErr.pairs.badLookup01
# try to directly print pair's first element

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
	pair(int, char) p = newpair(10, 'a') ;
  println fst p
end


In test/wacc_examples/invalid/syntaxErr/pairs/badLookup01.wacc (line 13, column 11):
  unexpected keyword fst
  expected expression
  >	pair(int, char) p = newpair(10, 'a') ;
  >  println fst p
             ^^^
  >end